openmetadata-docs/content/v1.6.x/main-concepts/metadata-standard/schemas/configuration/index.md
---
title: index
slug: /main-concepts/metadata-standard/schemas/configuration
---

# Configuration

This folder contains the following items:

- [**EventHandlerConfiguration**](/main-concepts/metadata-standard/schemas/configuration/eventhandlerconfiguration)
- [**AppsPrivateConfiguration**](/main-concepts/metadata-standard/schemas/configuration/appsprivateconfiguration)
- [**WorkflowSettings**](/main-concepts/metadata-standard/schemas/configuration/workflowsettings)
- [**TaskNotificationConfiguration**](/main-concepts/metadata-standard/schemas/configuration/tasknotificationconfiguration)
- [**KafkaEventConfiguration**](/main-concepts/metadata-standard/schemas/configuration/kafkaeventconfiguration)
- [**PipelineServiceClientConfiguration**](/main-concepts/metadata-standard/schemas/configuration/pipelineserviceclientconfiguration)
- [**LoginConfiguration**](/main-concepts/metadata-standard/schemas/configuration/loginconfiguration)
- [**LimitsConfiguration**](/main-concepts/metadata-standard/schemas/configuration/limitsconfiguration)
- [**AuthConfig**](/main-concepts/metadata-standard/schemas/configuration/authconfig)
- [**JwtTokenConfiguration**](/main-concepts/metadata-standard/schemas/configuration/jwttokenconfiguration)
- [**ThemeConfiguration**](/main-concepts/metadata-standard/schemas/configuration/themeconfiguration)
- [**AuthenticationConfiguration**](/main-concepts/metadata-standard/schemas/configuration/authenticationconfiguration)
- [**FernetConfiguration**](/main-concepts/metadata-standard/schemas/configuration/fernetconfiguration)
- [**LdapTrustStoreConfig**](/main-concepts/metadata-standard/schemas/configuration/ldaptruststoreconfig)
- [**LineageSettings**](/main-concepts/metadata-standard/schemas/configuration/lineagesettings)
- [**AuthorizerConfiguration**](/main-concepts/metadata-standard/schemas/configuration/authorizerconfiguration)
- [**ChangeEventConfiguration**](/main-concepts/metadata-standard/schemas/configuration/changeeventconfiguration)
- [**AssetCertificationSettings**](/main-concepts/metadata-standard/schemas/configuration/assetcertificationsettings)
- [**ProfilerConfiguration**](/main-concepts/metadata-standard/schemas/configuration/profilerconfiguration)
- [**SearchSettings**](/main-concepts/metadata-standard/schemas/configuration/searchsettings)
- [**SlackAppConfiguration**](/main-concepts/metadata-standard/schemas/configuration/slackappconfiguration)
- [**LogoConfiguration**](/main-concepts/metadata-standard/schemas/configuration/logoconfiguration)
- [**ElasticSearchConfiguration**](/main-concepts/metadata-standard/schemas/configuration/elasticsearchconfiguration)
- [**TestResultNotificationConfiguration**](/main-concepts/metadata-standard/schemas/configuration/testresultnotificationconfiguration)
- [**UiThemePreference**](/main-concepts/metadata-standard/schemas/configuration/uithemepreference)
- [**DataQualityConfiguration**](/main-concepts/metadata-standard/schemas/configuration/dataqualityconfiguration)
- [**LdapConfiguration**](/main-concepts/metadata-standard/schemas/configuration/ldapconfiguration)


Documentation file automatically generated at 2025-01-15 09:05:25.266839+00:00.
