openmetadata-docs/content/v1.10.x-SNAPSHOT/main-concepts/metadata-standard/schemas/configuration/index.md
---
title: index
slug: /main-concepts/metadata-standard/schemas/configuration
---

# Configuration

This folder contains the following items:

- [**EventHandlerConfiguration**](/main-concepts/metadata-standard/schemas/configuration/eventhandlerconfiguration)
- [**AppsPrivateConfiguration**](/main-concepts/metadata-standard/schemas/configuration/appsprivateconfiguration)
- [**WorkflowSettings**](/main-concepts/metadata-standard/schemas/configuration/workflowsettings)
- [**TaskNotificationConfiguration**](/main-concepts/metadata-standard/schemas/configuration/tasknotificationconfiguration)
- [**KafkaEventConfiguration**](/main-concepts/metadata-standard/schemas/configuration/kafkaeventconfiguration)
- [**PipelineServiceClientConfiguration**](/main-concepts/metadata-standard/schemas/configuration/pipelineserviceclientconfiguration)
- [**LoginConfiguration**](/main-concepts/metadata-standard/schemas/configuration/loginconfiguration)
- [**LimitsConfiguration**](/main-concepts/metadata-standard/schemas/configuration/limitsconfiguration)
- [**AuthConfig**](/main-concepts/metadata-standard/schemas/configuration/authconfig)
- [**JwtTokenConfiguration**](/main-concepts/metadata-standard/schemas/configuration/jwttokenconfiguration)
- [**ThemeConfiguration**](/main-concepts/metadata-standard/schemas/configuration/themeconfiguration)
- [**AuthenticationConfiguration**](/main-concepts/metadata-standard/schemas/configuration/authenticationconfiguration)
- [**FernetConfiguration**](/main-concepts/metadata-standard/schemas/configuration/fernetconfiguration)
- [**OpsConfig**](/main-concepts/metadata-standard/schemas/configuration/opsconfig)
- [**CacheConfiguration**](/main-concepts/metadata-standard/schemas/configuration/cacheconfiguration)
- [**LdapTrustStoreConfig**](/main-concepts/metadata-standard/schemas/configuration/ldaptruststoreconfig)
- [**LineageSettings**](/main-concepts/metadata-standard/schemas/configuration/lineagesettings)
- [**AuthorizerConfiguration**](/main-concepts/metadata-standard/schemas/configuration/authorizerconfiguration)
- [**ChangeEventConfiguration**](/main-concepts/metadata-standard/schemas/configuration/changeeventconfiguration)
- [**OpenMetadataBaseUrlConfiguration**](/main-concepts/metadata-standard/schemas/configuration/openmetadatabaseurlconfiguration)
- [**AssetCertificationSettings**](/main-concepts/metadata-standard/schemas/configuration/assetcertificationsettings)
- [**ProfilerConfiguration**](/main-concepts/metadata-standard/schemas/configuration/profilerconfiguration)
- [**SearchSettings**](/main-concepts/metadata-standard/schemas/configuration/searchsettings)
- [**EntityRulesSettings**](/main-concepts/metadata-standard/schemas/configuration/entityrulessettings)
- [**AiPlatformConfiguration**](/main-concepts/metadata-standard/schemas/configuration/aiplatformconfiguration)
- [**SlackAppConfiguration**](/main-concepts/metadata-standard/schemas/configuration/slackappconfiguration)
- [**LogoConfiguration**](/main-concepts/metadata-standard/schemas/configuration/logoconfiguration)
- [**OpertionalConfiguration**](/main-concepts/metadata-standard/schemas/configuration/opertionalconfiguration)
- [**ElasticSearchConfiguration**](/main-concepts/metadata-standard/schemas/configuration/elasticsearchconfiguration)
- [**TestResultNotificationConfiguration**](/main-concepts/metadata-standard/schemas/configuration/testresultnotificationconfiguration)
- [**UiThemePreference**](/main-concepts/metadata-standard/schemas/configuration/uithemepreference)
- [**DataQualityConfiguration**](/main-concepts/metadata-standard/schemas/configuration/dataqualityconfiguration)
- [**LdapConfiguration**](/main-concepts/metadata-standard/schemas/configuration/ldapconfiguration)


Documentation file automatically generated at 2025-08-12 05:39:47.683420+00:00.
